# inbound-parser-check

./: .gitignore  README.md  app.py  pyproject.toml  skuProd.csv  zzsete.xlsx
